Se arreglo todo